coupon log 옮기기 - 서치, 백

--- a/views/templates/coupon_log.html
+++ b/views/templates/coupon_log.html
@@ -59,7 +59,7 @@
                     <nav class="grid items-start px-4 text-sm font-medium">
                         <a
                                 class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
-                                href="./discount"
+                                href="/discount"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -149,7 +149,7 @@
                         {#                        </a>#}
                         <a
                                 class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
-                                href="./search"
+                                href="/carlist"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -170,7 +170,7 @@
                         </a>
                         <a
                                 class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"
-                                href="#"
+                                href="/cplist"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -233,7 +233,7 @@
         </div>
         <div class="flex flex-col">
             <header class="flex h-14 lg:h-[60px] items-center gap-4 border-b bg-gray-100/40 px-6 dark:bg-gray-800/40">
-                <a class="lg:hidden" href="#">
+                <a class="lg:hidden" href="/cplist">
                     <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="24"
@@ -253,54 +253,51 @@
                     <span class="sr-only">Home</span>
                 </a>
                 <div class="w-full flex-1">
-                    <form>
-                        <div class="relative">
-                            <!-- 검색 -->
-                            <div class="">
-                                <div class="flex items-center justify-between py-2">
-                                    <div class="flex space-x-2">
-                                        <div class="flex items-center space-x-4">
-                                            <div>
-                                                <input id="month" type="radio" name="search" checked/>
-                                                <label for="month">Month</label>
+                    <div class="relative">
+                        <!-- 검색 -->
+                        <div class="">
+                            <div class="flex items-center justify-between py-2">
+                                <div class="flex space-x-2">
+                                    <div class="flex items-center space-x-4">
+                                        <div>
+                                            <input id="month" type="radio" name="search" checked/>
+                                            <label for="month">Month</label>
+                                        </div>
+                                        <div>
+                                            <input id="date" type="radio" name="search"/>
+                                            <label for="date">Date</label>
+                                        </div>
+                                        <div class="flex items-center space-x-2">
+                                            <div class="flex flex-col w-40 mon">
+                                                <input
+                                                        class="h-10 rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
+                                                        id="monthInput"
+                                                        placeholder="Enter month"
+                                                        type="month"
+                                                />
                                             </div>
-                                            <div>
-                                                <input id="date" type="radio" name="search"/>
-                                                <label for="date">Date</label>
+                                            <div class="flex flex-col w-40 dt hid" style="margin-left:0">
+                                                <input
+                                                        class="h-10 rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
+                                                        id="dateInput"
+                                                        placeholder="Enter date"
+                                                        type="date"
+                                                />
                                             </div>
-                                            <div class="flex items-center space-x-2">
-                                                <div class="flex flex-col w-40 mon">
-                                                    <input
-                                                            class="h-10 rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
-                                                            id="monthInput"
-                                                            placeholder="Enter month"
-                                                            type="month"
-                                                    />
-                                                </div>
-                                                <div class="flex flex-col w-40 dt hid" style="margin-left:0">
-                                                    <input
-                                                            class="h-10 rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
-                                                            id="dateInput"
-                                                            placeholder="Enter date"
-                                                            type="date"
-                                                    />
-                                                </div>
-                                                <button
-                                                        id="cpschbtn"
-                                                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input hover:text-accent-foreground h-10 px-4 py-1 text-xs bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
-                                                        onclick="location.href = 'http://127.0.0.1:8000/2024-04/1';"
-                                                >
+                                            <button
+                                                    id="cpschbtn"
+                                                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input hover:text-accent-foreground h-10 px-4 py-1 text-xs bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
+                                            >
 
-                                                    검색
-                                                </button>
-                                            </div>
+                                                검색
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- 검색 끝 -->
                         </div>
-                    </form>
+                        <!-- 검색 끝 -->
+                    </div>
                 </div>
                 <button
                         class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-full border border-gray-200 w-8 h-8 dark:border-gray-800"
@@ -481,6 +478,7 @@
 {% endblock %}
 
 {% block script %}
+
     <script>
         nowmth = new Date().toISOString().slice(0, 7);
         nowdt = new Date().toISOString().substring(0, 10);
@@ -504,13 +502,14 @@
             document.querySelector('.dt').classList.remove('hid');
         });
 
-/*
+
         // 검색 기능
 
         document.addEventListener('DOMContentLoaded', () => {
             let cpschbtn = document.querySelector("#cpschbtn");
 
             cpschbtn.addEventListener('click', () => {
+
                 let cpkey = "";
                 if (mthrdo.checked) {
                     cpkey = document.querySelector('#monthInput').value;
@@ -553,9 +552,5 @@
 
         // 페이지 로드될 때와 새로고침 될 때 모두 updateContent 함수 실행
         window.addEventListener('load', updateContent);
-
-        */
-
-
     </script>
 {% endblock %}
