--- a/views/templates/coupon_log.html
+++ b/views/templates/coupon_log.html
@@ -233,7 +233,7 @@
         </div>
         <div class="flex flex-col">
             <header class="flex h-14 lg:h-[60px] items-center gap-4 border-b bg-gray-100/40 px-6 dark:bg-gray-800/40">
-                <a class="lg:hidden" href="/cplist">
+                <a class="lg:hidden" href="#">
                     <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="24"
