--- a/views/templates/coupon_log.html
+++ b/views/templates/coupon_log.html
@@ -191,7 +191,7 @@
                         </a>
                         <a
                                 class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
-                                href="./log"
+                                href="/cpsum"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
