--- a/views/templates/coupon_summary.html
+++ b/views/templates/coupon_summary.html
@@ -325,7 +325,7 @@
                         Add vehicle
                     </button>
                 </div>
-                <div class="border shadow-sm rounded-lg">
+                <div class="border shadow-sm rounded-lg max-h-[500px] overflow-auto">
                     <div class="relative w-full overflow-auto">
                         <table class="w-full caption-bottom text-sm">
                             <!-- 표 제목 -->
